--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "0x1C-binary_trees"]
 	path = 0x1C-binary_trees
-	url = https://github.com/bchen528/0x1C-binary_trees
+	url = git@github.com:bchen528/0x1C-binary_trees.git
